--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
    <h1>Help animals :)</h1>
    <p>Paragraph about the cause</p>
-   <a href="">this page</a>
+   <a class = "meetingbutton" href="species.html">species</a>
 </body>
 </html>
