Created home page + UI
Added photos, navigation bar, and created formatting for home page.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,66 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Grid</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-   <h1>Help animals :)</h1>
-   <p>Paragraph about the cause</p>
-   <a class = "meetingbutton" href="species.html">species</a>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale1">
+        <title>Home Page - Our goal</title>
+        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+        <style>
+            body {
+                font-family: 'Montserrat', sans-serif;
+                font-size: 18px;
+            }
+            ul {
+                list-style-type: none;
+                margin: 0;
+                padding: 0;
+                overflow: hidden;
+                background-color: #000000;
+                text-align: center;
+            }
+            li a {
+                float: left;
+                color: white;
+                text-align: center;
+                padding: 25px;
+                text-decoration: none;
+            }
+            li a:hover {
+                background-color: #202020;
+            }
+        </style>
+    </head>
+    <div class = "container">
+        <nav>
+            <ul>
+                <li><a class = "button" href="index.html">HOME</a></li>
+                <li><a class = "button" href="species.html">MEET THE SPECIES</a></li>
+                <li><a class = "button" href="species.html">CONSERVATION EFFORT</a></li>
+                <li><a class = "button" href="species.html">HOW YOU CAN HELP</a></li></li>
+                <br>
+            </ul>
+        </nav>
+        <body>
+            <div class = "titleBlock">
+                <img src = "https://i.imgur.com/Fxc33ED.jpeg">
+            </div>
+            
+            <div class = "border">
+                <div class = "TitleBlock1">
+                    <br><br><br>
+                    <div class = "frogBlock">
+                        <img src="https://images.squarespace-cdn.com/content/v1/5571cdd6e4b0dd00b1d83c08/1630073549472-0NHVC1ZMA7RRYORXWTYC/Poison+Arrow+Frog+%28Dendrobatidae%29.jpeg?format=1000w">
+                    </div>
+                    <h1 class = "TitleName1">The Problem of Endangered Species</h1>
+                    <br>
+                    <p class = "text" id = "p0">
+                        An endangered species is an animal or plant that's considered at risk of extinction. A species can be listed as endangered at the state, federal, and international level. On the federal level, the endangered species list is managed under the Endangered Species Act.
+                        <br><br>
+                        The Endangered Species Act (ESA) was enacted by Congress in 1973. Under the ESA, the federal government has the responsibility to protect endangered species (species that are likely to become extinct throughout all or a large portion of their range), threatened species (species that are likely to become endangered in the near future), and critical habitat (areas vital to the survival of endangered or threatened species).
+                    </p>
+                </div>
+            </div>
+        </body>
+    </div>    
 </html>
