adding_nav_bars

--- a/howTohelp.html
+++ b/howTohelp.html
@@ -2,9 +2,18 @@
 <html>
 <head>
     <title>Conservation Efforts</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="howTohelp.css">
 </head>
-
+<div class = "container">
+    <nav>
+        <ul>
+            <li><a class = "button" href="index.html">HOME</a></li>
+            <li><a class = "button" href="species.html">MEET THE SPECIES</a></li>
+            <li><a class = "button" href="howTohelp.html">CONSERVATION EFFORT</a></li>
+            <li><a class = "button" href="donation.html">HOW YOU CAN HELP</a></li></li>
+            <br>
+        </ul>
+    </nav>
 <body onload="hideDef()">
     <input type="button" id="next" value="Whales" onclick='viewTopic("whale")' />
     <input type="button" id="next" value="Other Sea Creatures;" onclick='viewTopic("sea")' />
