--- a/index.html
+++ b/index.html
@@ -6,38 +6,14 @@
         <title>Home Page - Our goal</title>
         <link rel="stylesheet" href="index.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-        <style>
-            body {
-                font-family: 'Montserrat', sans-serif;
-                font-size: 18px;
-            }
-            ul {
-                list-style-type: none;
-                margin: 0;
-                padding: 0;
-                overflow: hidden;
-                background-color: #000000;
-                text-align: center;
-            }
-            li a {
-                float: left;
-                color: white;
-                text-align: center;
-                padding: 25px;
-                text-decoration: none;
-            }
-            li a:hover {
-                background-color: #202020;
-            }
-        </style>
     </head>
     <div class = "container">
         <nav>
             <ul>
                 <li><a class = "button" href="index.html">HOME</a></li>
                 <li><a class = "button" href="species.html">MEET THE SPECIES</a></li>
-                <li><a class = "button" href="species.html">CONSERVATION EFFORT</a></li>
-                <li><a class = "button" href="species.html">HOW YOU CAN HELP</a></li></li>
+                <li><a class = "button" href="howTohelp.html">CONSERVATION EFFORT</a></li>
+                <li><a class = "button" href="donation.html">HOW YOU CAN HELP</a></li></li>
                 <br>
             </ul>
         </nav>
