--- a/species.html
+++ b/species.html
@@ -5,14 +5,18 @@
     <link rel="stylesheet" href="species.css">
 </head>
 <div class = "container">
-        <nav>
-            <ul>
-                <li><a class = "button" href="index.html">HOME</a></li>
-            </ul>
-        </nav>
+    <nav>
+        <ul>
+            <li><a class = "button" href="index.html">HOME</a></li>
+            <li><a class = "button" href="species.html">MEET THE SPECIES</a></li>
+            <li><a class = "button" href="howTohelp.html">CONSERVATION EFFORT</a></li>
+            <li><a class = "button" href="donation.html">HOW YOU CAN HELP</a></li></li>
+            <br>
+        </ul>
+    </nav>
         <h1 class = "TitleName">Meet the Species</h1>
         <p class = "text">There are over 7000 species that are considered endangered. 
-                Though we can’t fit them all, here's a few we’ve decided to let shine in the spotlight.</p>
+                Though we can't fit them all, here's a few we've decided to let shine in the spotlight.</p>
         <br>
         <div class="block">
             <h3 class = "gorillaTitle">Mountain Gorilla</h3>
