--- a/howTohelp.html
+++ b/howTohelp.html
@@ -2,7 +2,10 @@
 <html>
 <head>
     <title>Conservation Efforts</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale1">
     <link rel="stylesheet" href="howTohelp.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 </head>
 <div class = "container">
     <nav>
@@ -30,5 +33,5 @@
 
 <script src="howToHelp.js"></script>
 </body>
-
+</div> 
 </html>
