--- a/species.html
+++ b/species.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale1">
     <title>Meet the species</title>
     <link rel="stylesheet" href="species.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 </head>
 <div class = "container">
     <nav>
@@ -15,7 +18,7 @@
         </ul>
     </nav>
         <h1 class = "TitleName">Meet the Species</h1>
-        <p class = "text">There are over 7000 species that are considered endangered. 
+        <p class = "text1">There are over 7000 species that are considered endangered. 
                 Though we can't fit them all, here's a few we've decided to let shine in the spotlight.</p>
         <br>
         <div class="block">
