--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale1">
-        <title>Home Page - Our goal</title>
+        <title>Endangered Species - Home</title>
         <link rel="stylesheet" href="index.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     </head>
@@ -19,22 +19,49 @@
         </nav>
         <body>
             <div class = "titleBlock">
-                <img src = "https://i.imgur.com/Fxc33ED.jpeg">
+                <img src = "https://i.imgur.com/LP2h3DU.png">
             </div>
-            
             <div class = "border">
                 <div class = "TitleBlock1">
                     <br><br><br>
-                    <div class = "frogBlock">
+                    <div class = "imgR">
                         <img src="https://images.squarespace-cdn.com/content/v1/5571cdd6e4b0dd00b1d83c08/1630073549472-0NHVC1ZMA7RRYORXWTYC/Poison+Arrow+Frog+%28Dendrobatidae%29.jpeg?format=1000w">
                     </div>
-                    <h1 class = "TitleName1">The Problem of Endangered Species</h1>
+                    <h1 class = "TitleNameL">The Problem of Endangered Species</h1>
                     <br>
-                    <p class = "text" id = "p0">
-                        An endangered species is an animal or plant that's considered at risk of extinction. A species can be listed as endangered at the state, federal, and international level. On the federal level, the endangered species list is managed under the Endangered Species Act.
+                    <p class = "textL" id = "p0">
+                        There are approximately 8.7 million species on Earth today, with around 1-2 million being animal species. And yet, with the 4 billion species that have existed on Earth in its lifetime, 99.9% are now extinct. While most have perished under cataclysmic events, some animal extinctions are a result of human intervention. Even now, there are over 16,000 endangered plant & animals species around the world. What have humans done to cause endangerment and such extinctions?
                         <br><br>
-                        The Endangered Species Act (ESA) was enacted by Congress in 1973. Under the ESA, the federal government has the responsibility to protect endangered species (species that are likely to become extinct throughout all or a large portion of their range), threatened species (species that are likely to become endangered in the near future), and critical habitat (areas vital to the survival of endangered or threatened species).
+                        Forms of human intervention that have led to the extinctinctions of hundreds of animal species are poaching/hunting, habitat loss, pollution, and climate change. Humans have hunted animals for sport since ancient times, and this has led to the decline in many species when left unchecked. Industrialism, more specifically the farming of resources, has also contributed to the destruction of animal habitats and climate change, which further damages the ecosystem as the world's temperature continues to increase.
                     </p>
+                    <br>
+                </div>
+                <div class = "TitleBlock2">
+                    <br><br><br><br>
+                    <div class = "imgL">
+                        <img src="https://news.cgtn.com/news/2020-05-19/Western-black-rhinoceros-Won-the-battle-but-lost-the-war-QChpPvMG2c/img/e4c5622fe9d64dafba7068f4b8ae82a8/e4c5622fe9d64dafba7068f4b8ae82a8.jpeg">
+                    </div>
+                    <h1 class = "TitleNameR">It's Only Getting Worse</h1>
+                    <br>
+                    <p class = "textR" id = "p0">
+                        Before becoming extinct, a species must first, unless facing a mass extinction, reach a point of endangerment. There are plenty of endangered species that humans have been aware of, but many are ignorant and either worsen the situation or do nothing to help the cause.
+                        <br><br>
+                        The global rate of species extinction over the past 50 years is already hundreds of times higher than it has averaged over the past 10 million years. Human actions are threatening the extinction of animals species now more than ever, and some scientists predict that this will result in the extinction of more than 1,000 larger species of mammals and birds over the next century.
+                    </p>
+                </div>
+                <div class = "TitleBlock3">
+                    <br><br><br>
+                    <div class = "imgR">
+                        <img src="https://c.files.bbci.co.uk/16E21/production/_90092739_gettyimages-468983676.jpg">
+                    </div>
+                    <h1 class = "TitleNameL">However, Progress Is Being Made</h1>
+                    <br>
+                    <p class = "textL" id = "p0">
+                        While the current situation with endangered animals is dire, there have been many actions done to help aid this ongoing problem. For example, wild pandas were listed as endangered in 1990. However, with a hard-fought conservation process, such as putting pandas in their own habitats, their status was recently moved down to "vulnerable."
+                        <br><br>
+                        Other legal efforts such as the Endangered Species Act (ESA) have also been enacted in an attempt to protect endangered species, threatened spcies, and critical habitats. You can read our <a href="howToHelp.html">Conservation Effort</a> page to learn more about what's being done to help. To find out what <b>you</b> can do to help, you can view our <a href="donation.html">How You Can Help</a> page.
+                    </p>
+                    <br>
                 </div>
             </div>
         </body>
