--- a/donation.html
+++ b/donation.html
@@ -4,33 +4,33 @@
     <title>Grid</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale1">
-    <link rel="stylesheet" href="donation.css">
+    <link rel="stylesheet" href="css/donation.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 </head>
+<nav>
+    <ul>
+        <li><a class = "button" href="index.html">HOME</a></li>
+        <li><a class = "button" href="species.html">MEET THE SPECIES</a></li>
+        <li><a class = "button" href="howTohelp.html">CONSERVATION EFFORT</a></li>
+        <li><a class = "button" href="donation.html">HOW YOU CAN HELP</a></li></li>
+        <br>
+    </ul>
+</nav>
 <div class = "container">
-    <nav>
-        <ul>
-            <li><a class = "button" href="index.html">HOME</a></li>
-            <li><a class = "button" href="species.html">MEET THE SPECIES</a></li>
-            <li><a class = "button" href="howTohelp.html">CONSERVATION EFFORT</a></li>
-            <li><a class = "button" href="donation.html">HOW YOU CAN HELP</a></li></li>
+    <body>
+        <div class="donations" >
+            <h1>donate to help endangered animals :)</h1>
+            <p>Just leaving the links here will edit later</p>
+            <a href="https://gorillafund.org/">mountain gorilla</a>
             <br>
-        </ul>
-    </nav>
-<body>
-    <div class="donations" >
-   <h1>donate to help endangered animals :)</h1>
-   <p>Just leaving the links here will edit later</p>
-   <a href="https://gorillafund.org/">mountain gorilla</a>
-   <br>
-   <a href="https://www.worldwildlife.org/species/amur-leopard">amur leopard</a>
-   <br>
-   <a href="https://www.savetherhino.org/rhino-info/rhino-species/javan-rhino/">Javan Rhinoceros</a>
-   <br>
-   <a href="https://www.vaquitacpr.org/donate/">vaquita</a>
-   <br>
-   <a href="url">african forest elephant</a>
-</div>
-</body>
+            <a href="https://www.worldwildlife.org/species/amur-leopard">amur leopard</a>
+            <br>
+            <a href="https://www.savetherhino.org/rhino-info/rhino-species/javan-rhino/">Javan Rhinoceros</a>
+            <br>
+            <a href="https://www.vaquitacpr.org/donate/">vaquita</a>
+            <br>
+            <a href="url">african forest elephant</a>
+        </div>
+    </body>
 </div> 
 </html>
