--- a/species.html
+++ b/species.html
@@ -24,7 +24,7 @@
     <div class="block">
         <h3 class = "gorillaTitle">Mountain Gorilla</h3>
         <img src="pictures/gorilla.jpg">
-        <div class = "squareSubBlock">
+        <div class = "gsquareSubBlock">
             <br>
             <p class = "animalBoxText">Mountain gorillas are one of the largest living primates. Closely related to humans, they have long hair and short arms, broad shoulders and a massive chest. Sadly, only about 1000 of them remain in the wild. They have been declared endangered as of 2018 by the IUCN. </p>
             <p class = "animalBoxText">For decades, Mountain gorillas have been subjected to habitat loss due to forest degradation, hunting, and human conflict. As people move closer to the endangered apes, they bring the risk of human diseases that could transmit and create a serious threat to its habitat.</p>
