--- a/donation.html
+++ b/donation.html
@@ -9,28 +9,88 @@
 </head>
 <nav>
     <ul>
-        <li><a class = "button" href="index.html">HOME</a></li>
-        <li><a class = "button" href="species.html">MEET THE SPECIES</a></li>
-        <li><a class = "button" href="howTohelp.html">CONSERVATION EFFORT</a></li>
-        <li><a class = "button" href="donation.html">HOW YOU CAN HELP</a></li></li>
+        <li><a class="button" href="index.html">HOME</a></li>
+        <li><a class="button" href="species.html">MEET THE SPECIES</a></li>
+        <li><a class="button" href="howTohelp.html">CONSERVATION EFFORT</a></li>
+        <li><a class="button" href="donation.html">HOW YOU CAN HELP</a></li>
+        </li>
         <br>
     </ul>
 </nav>
-<div class = "container">
+<div class="container">
+
     <body>
-        <div class="donations" >
-            <h1>donate to help endangered animals :)</h1>
-            <p>Just leaving the links here will edit later</p>
-            <a href="https://gorillafund.org/">mountain gorilla</a>
+        <div class="donations">
+            <h1> Donation page if you wish to help endangered animals</h1>
             <br>
-            <a href="https://www.worldwildlife.org/species/amur-leopard">amur leopard</a>
+            <p> A list of our highlight species and where you can donate directly to them. And if you wish to donate to
+                other
+                endangered animals you can check the bottom of this page.
+            </p>
             <br>
-            <a href="https://www.savetherhino.org/rhino-info/rhino-species/javan-rhino/">Javan Rhinoceros</a>
-            <br>
-            <a href="https://www.vaquitacpr.org/donate/">vaquita</a>
-            <br>
-            <a href="url">african forest elephant</a>
         </div>
+        <div class="gallery1">
+            <a target="_blank" href="pictures/elephant.jpg">
+                <img src="pictures/elephant.jpg" alt="Cinque Terre" width="1000" height="400">
+            </a>
+            <div class="desc">Click below if you wish to donate to African Forest Elephants</div>
+            <div class="button1">
+                <a href="https://www.worldwildlife.org/species/african-forest-elephant"
+                    target="_blank"><button>Donate</button></a>
+            </div>
+
+        </div>
+
+        <div class="gallery2">
+            <a target="_blank" href="pictures/vaquita.jpg">
+                <img src="pictures/vaquita.jpg" alt="Forest" width="1000" height="400">
+            </a>
+            <div class="desc">Click below if you wish to donate to vaquitas</div>
+            <div class="button2">
+                <a href="https://www.vaquitacpr.org/donate/" target="_blank"><button>Donate</button></a>
+            </div>
+        </div>
+
+        <div class="gallery3">
+            <a target="_blank" href="pictures/leopard.jpg">
+                <img src="pictures/leopard.jpg" alt="Northern Lights" width="1000" height="400">
+            </a>
+            <div class="desc">Click below if you wish to donate to Amur leopards</div>
+            <div class="button3">
+                <a href="https://www.worldwildlife.org/species/amur-leopard" target="_blank"><button>Donate</button></a>
+            </div>
+        </div>
+
+        <div class="gallery4">
+            <a target="_blank" href="pictures/rhino.jpg">
+                <img src="pictures/rhino.jpg" alt="Mountains" width="1000" height="400">
+            </a>
+            <div class="desc">Click below if you wish to donate to Javan Rhinoceros</div>
+            <div class="button4">
+                <a href="https://www.savetherhino.org/rhino-info/rhino-species/javan-rhino/"
+                    target="_blank"><button>Donate</button></a>
+            </div>
+        </div>
+        <div class="gallery5">
+            <a target="_blank" href="pictures/gorilla.jpg">
+                <img src="pictures/gorilla.jpg" alt="Mountains" width="1000" height="400">
+            </a>
+            <div class="desc">Click below if you wish to donate to Mountain Gorillas</div>
+            <div class="button5">
+                <a href="https://gorillafund.org/" target="_blank"><button>Donate</button></a>
+            </div>
+            <br>
+            <div class="last">
+                <a target="_blank" href="pictures/polar.jpg">
+                    <img src="pictures/polar.jpg" alt="Mountains" width="100%" height="500">
+                </a>
+                <h2 class="desc">Click below if you wish to support WWF and any Animal species</h2>
+                <div class="button6">
+                    <a href="https://gifts.worldwildlife.org/gift-center/one-time-donation.aspx" target="_blank"> <button type="button" class="block">Donate to WWF</button></a>
+                </div>
+            </div>
+                <br>
     </body>
-</div> 
+</div>
+
 </html>
