Fixed misspellings and changed slight formatting on home/donation page, closes #19
Spelling corrections and format fixing, overall consistency

--- a/donation.html
+++ b/donation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Grid</title>
+    <title>How You Can Help</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale1">
     <link rel="stylesheet" href="css/donation.css">
@@ -9,11 +9,10 @@
 </head>
 <nav>
     <ul>
-        <li><a class="button" href="index.html">HOME</a></li>
-        <li><a class="button" href="species.html">MEET THE SPECIES</a></li>
-        <li><a class="button" href="howTohelp.html">CONSERVATION EFFORT</a></li>
-        <li><a class="button" href="donation.html">HOW YOU CAN HELP</a></li>
-        </li>
+        <li><a class = "button" href="index.html">HOME</a></li>
+        <li><a class = "button" href="species.html">MEET THE SPECIES</a></li>
+        <li><a class = "button" href="howTohelp.html">CONSERVATION EFFORTS</a></li>
+        <li><a class = "button" href="donation.html">HOW YOU CAN HELP</a></li></li>
         <br>
     </ul>
 </nav>
@@ -31,7 +30,7 @@
         </div>
         <div class="gallery1">
             <a target="_blank" href="pictures/elephant.jpg">
-                <img src="pictures/elephant.jpg" alt="Cinque Terre" width="1000" height="400">
+                <img src="pictures/elephant.jpg" alt="Cinque Terre" width="1000" height="550">
             </a>
             <div class="desc">Click below if you wish to donate to African Forest Elephants</div>
             <div class="button1">
@@ -43,7 +42,7 @@
 
         <div class="gallery2">
             <a target="_blank" href="pictures/vaquita.jpg">
-                <img src="pictures/vaquita.jpg" alt="Forest" width="1000" height="400">
+                <img src="pictures/vaquita.jpg" alt="Forest" width="1000" height="550">
             </a>
             <div class="desc">Click below if you wish to donate to vaquitas</div>
             <div class="button2">
@@ -53,7 +52,7 @@
 
         <div class="gallery3">
             <a target="_blank" href="pictures/leopard.jpg">
-                <img src="pictures/leopard.jpg" alt="Northern Lights" width="1000" height="400">
+                <img src="pictures/leopard.jpg" alt="Northern Lights" width="1000" height="550">
             </a>
             <div class="desc">Click below if you wish to donate to Amur leopards</div>
             <div class="button3">
@@ -63,7 +62,7 @@
 
         <div class="gallery4">
             <a target="_blank" href="pictures/rhino.jpg">
-                <img src="pictures/rhino.jpg" alt="Mountains" width="1000" height="400">
+                <img src="pictures/rhino.jpg" alt="Mountains" width="1000" height="550">
             </a>
             <div class="desc">Click below if you wish to donate to Javan Rhinoceros</div>
             <div class="button4">
@@ -73,7 +72,7 @@
         </div>
         <div class="gallery5">
             <a target="_blank" href="pictures/gorilla.jpg">
-                <img src="pictures/gorilla.jpg" alt="Mountains" width="1000" height="400">
+                <img src="pictures/gorilla.jpg" alt="Mountains" width="1000" height="550">
             </a>
             <div class="desc">Click below if you wish to donate to Mountain Gorillas</div>
             <div class="button5">
@@ -82,7 +81,7 @@
             <br>
             <div class="last">
                 <a target="_blank" href="pictures/polar.jpg">
-                    <img src="pictures/polar.jpg" alt="Mountains" width="100%" height="500">
+                    <img src="pictures/polar.jpg" alt="Mountains" width="100%" height="550">
                 </a>
                 <h2 class="desc">Click below if you wish to support WWF and any Animal species</h2>
                 <div class="button6">
