--- a/howTohelp.html
+++ b/howTohelp.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Animal Conservation Efforts</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale1">
+    <title>Animal Conservation Efforts</title>
     <link rel="stylesheet" href="css/howTohelp.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 </head>
@@ -11,7 +11,7 @@
         <ul id="nav">
             <li id="nav"><a class = "button" href="index.html">HOME</a></li>
             <li id="nav"><a class = "button" href="species.html">MEET THE SPECIES</a></li>
-            <li id="nav"><a class = "button" href="howTohelp.html">CONSERVATION EFFORT</a></li>
+            <li id="nav"><a class = "button" href="howTohelp.html">CONSERVATION EFFORTS</a></li>
             <li id="nav"><a class = "button" href="donation.html">HOW YOU CAN HELP</a></li></li>
         </ul>
     </nav>
