--- a/species.html
+++ b/species.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale1">
-    <title>Meet the species</title>
+    <title>Meet the Species</title>
     <link rel="stylesheet" href="css/species.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 </head>
@@ -11,7 +11,7 @@
     <ul>
         <li><a class = "button" href="index.html">HOME</a></li>
         <li><a class = "button" href="species.html">MEET THE SPECIES</a></li>
-        <li><a class = "button" href="howTohelp.html">CONSERVATION EFFORT</a></li>
+        <li><a class = "button" href="howTohelp.html">CONSERVATION EFFORTS</a></li>
         <li><a class = "button" href="donation.html">HOW YOU CAN HELP</a></li></li>
         <br>
     </ul>
