Fixed Conservation Effort in home page

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <p class = "textL">
                         While the current situation with endangered animals is dire, there have been many actions done to help aid this ongoing problem. For example, wild pandas were listed as endangered in 1990. However, with a hard-fought conservation process, such as putting pandas in their own habitats, their status was recently moved down to "vulnerable."
                         <br><br>
-                        Other legal efforts such as the Endangered Species Act (ESA) have also been enacted in an attempt to protect endangered species, threatened species, and critical habitats. You can read our <a href="howToHelp.html">Conservation Effort</a> page to learn more about what's being done to help. To find out what <b>you</b> can do to help, you can view our <a href="donation.html">How You Can Help</a> page.
+                        Other legal efforts such as the Endangered Species Act (ESA) have also been enacted in an attempt to protect endangered species, threatened species, and critical habitats. You can read our <a href="howTohelp.html">Conservation Effort</a> page to learn more about what's being done to help. To find out what <b>you</b> can do to help, you can view our <a href="donation.html">How You Can Help</a> page.
                     </p>
                     <br>
                 </div>
